Fix totally broken renaming of online IMAP folders:

- emit the closed() signal before calling folderMgr()->contentsChanged()
  This fixes an refcount assert when calculating the unread count.
  The assert would trigger there because the folder is closed with refcount 0
  but still selected. Now, the headerview will open the folder before that, making
  the refount 1.

- Don't show an error message when the old folder couldn't be unsubscribed. That error
  message doesn't make sense, since the old folder does not exist anymore, and therefore
  can't be unsubscribed anyway.

- Let the mainwidget re-open the folder after it is renamed. This fixes an assert when 
  switching away from an renamed folder, which would close it despite not having called open()
  before.

- Also change the objectname when renaming, now renaming the same folder more than once works.

- tabs--

BUG: 158861

svn path=/trunk/KDE/kdepim/; revision=797025